[package]
name = "mcwriter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
dbscan = "0.2.0"
fastanvil = "0.26.0"
fastnbt = "2.3.2"
flate2 = "1.0.25"
itertools = "0.10.5"
mca = { path = "../mca" }
partitions = "0.2.4"
rayon = "1.6.1"
serde = "1.0.152"
tui = "0.19.0"
walkdir = "2.3.2"
wildmatch = "2.1.1"
